--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Khush Soni</h1>
+            <div><a href="mailto:khushsoni555@gmail.com">khushsoni555gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/khushsoni">@github_khush</a></li>
+                    <li><a href="https://linkedin.com/in/khush-soni-145463202/">@linkedin_khush</a></li>
+                    <li><a href="https://twitter.com/khushj450">@twitter_khush</a></li>
                 </ul>    
             </section>
             
